Minimal site.yaml

--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -1,7 +1,7 @@
-title: Grav
+title: Aqount DOCS
 author:
-  name: Joe Bloggs
-  email: 'joe@example.com'
+  name: KREIOS SARL
+  email: 'info@kreios.lu'
 metadata:
-    description: 'Grav is an easy to use, yet powerful, open source flat-file CMS'
+    description: 'Put some meaningful description here'
 
