--- a/composer.json
+++ b/composer.json
@@ -108,7 +108,8 @@
         "compile": [
             "bin/grav install",
             "bin/gpm install learn2",
-            "bin/gpm install breadcrumbs"
+            "bin/gpm install breadcrumbs",
+            "bin/gpm install markdown-fontawesome"
         ],
         "api-17": "vendor/bin/phpdoc-md generate system/src > user/pages/14.api/default.17.md",
         "post-create-project-cmd": "bin/grav install",
