Draft version "Contact us" and Glossary.

--- a/composer.json
+++ b/composer.json
@@ -109,7 +109,8 @@
             "bin/grav install",
             "bin/gpm install learn2",
             "bin/gpm install breadcrumbs",
-            "bin/gpm install markdown-fontawesome"
+            "bin/gpm install markdown-fontawesome",
+            "bin/gpm install page-toc"
         ],
         "api-17": "vendor/bin/phpdoc-md generate system/src > user/pages/14.api/default.17.md",
         "post-create-project-cmd": "bin/grav install",
